--- a/css/productos.css
+++ b/css/productos.css
@@ -95,4 +95,18 @@ footer {
     font-size: 30px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
+    animation-duration: 2s;
+    animation-name: redes;
+}
+
+@keyframes redes {
+    from {
+        margin-left: 100%;
+        width: 300%
+    }
+
+    to {
+        margin-left: 0%;
+        width: 100%;
+    }
 }
