--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,15 @@ h1 {
     text-align: center;
     font-size: 90px;
     margin-bottom: 10px;
-
+    transition: height, width, 8s;
 
 }
+
+h1:hover {
+    height: 200px;
+    width: 300px;
+}
+
 
 
 nav ul {
@@ -29,6 +35,7 @@ nav a {
     color: inherit;
 }
 
+
 body {
     background-color: antiquewhite;
 }
@@ -43,6 +50,7 @@ div {
     text-align: center;
     display: flex;
     justify-content: space-around;
+
 }
 
 
@@ -80,11 +88,25 @@ div {
     background-color: coral;
 }
 
-.footer.p {
+.p{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 30px;
+    animation-duration: 1s;
+    animation-name: redes;
 }
+@keyframes redes{
+        from {
+            margin-left: 100%;
+            width: 300%
+        }
+
+        to {
+            margin-left: 0%;
+            width: 100%;
+        }
+    }
+
 
 
 @media screen and (max-width: 768px) {
