--- a/css/style.css
+++ b/css/style.css
@@ -122,14 +122,8 @@ div {
     .grid-container {
         border: 1px solid black;
         display: grid;
-
-
-
         grid-template-columns: repeat(2, 50%);
-
         grid-template-rows: repeat(2, 200px);
-
-
         gap: 1px 1px;
         grid-template-areas:
             "perro gato"
@@ -143,7 +137,7 @@ div {
     }
 
     .gato {
-        grid-area: noticia-2;
+        grid-area: gato;
         background-color: rgb(88, 24, 64);
     }
 
@@ -155,6 +149,14 @@ div {
     .ubicacion {
         grid-area: ubicacion;
         background-color: rgb(150, 230, 46);
+    }
+
+    .img-gato{
+        border: solid black;
+    }
+
+    .img-perro{
+        border: solid blac;
     }
 }
 
@@ -201,7 +203,8 @@ div {
         flex-direction: column;
         justify-content: space-between;
     }
-
+    
+    
     .footer.p {
         font-size: 30px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
