--- a/scss/nuevo.scss
+++ b/scss/nuevo.scss
@@ -1,1 +1,7 @@
-@import "partials/header";
+// partials inicio
+@import "./partials\ inicio/_headerinicio.scss";
+@import "./partials\ inicio/_footerinicio.scss";
+@import "./partials\ inicio/_navinicio.scss";
+@import"./partials\ inicio/_bodyinicio.scss";
+//variables
+@import "./partials\ inicio/_variables.scss"
