realizando correcciones de la tercera entrega

--- a/scss/nuevo.scss
+++ b/scss/nuevo.scss
@@ -1,7 +1,8 @@
 // partials inicio
-@import "./partials\ inicio/_headerinicio.scss";
-@import "./partials\ inicio/_footerinicio.scss";
-@import "./partials\ inicio/_navinicio.scss";
-@import"./partials\ inicio/_bodyinicio.scss";
+@import "./partials/_headerinicio.scss";
+@import "./partials/_footerinicio.scss";
+@import "./partials/_navinicio.scss";
+@import"./partials/_bodyinicio.scss";
+@import"./partials/_media.scss";
 //variables
-@import "./partials\ inicio/_variables.scss"
+@import "./partials/_variables.scss"
