--- a/scss/partials/_bodyinicio.scss
+++ b/scss/partials/_bodyinicio.scss
@@ -14,54 +14,66 @@ form fieldset {
 }
 
 legend.formulario {
-    font-size:50px;
+    font-size: 50px;
     margin-bottom: 5%;
 }
 
-.contenedor{
+.contenedor {
     display: inline;
-    text-align: center; 
+    text-align: center;
 }
 
-div div .card{
+div div .card {
     background-color: none;
 }
 
-body div div.card{
+body div div.card {
     background-color: none;
 }
 
 
-a img.ofertas{
+a img.ofertas {
     width: 100%;
     height: 30%;
     text-align: center;
     margin-top: 5%;
 }
 
-.productos{
+.productos {
     width: 50px;
     height: 30px;
     align-items: center;
 
 }
 
-.imgprod {
+div div .imgprod {
     width: 400px;
     height: 300px;
-    margin-left: 50%;
+    margin-left: 80%;
     margin-top: 10%;
-
+    align-items: center;
 
 }
-div.quienes img{
+
+div.quienes img {
     margin-top: 5%;
     text-align: center;
     margin-left: 40%;
     margin-bottom: 3%;
 }
 
-body div img.card2{
+body div p.quienessomos{
+    color: black;
+    font-family: 'Pacifico', cursive;
+    font-size: x-large;
+    text-align: justify;
+    margin-top: 5%;
+    margin-left: 3%;
+
+    
+}
+
+body div img.card2 {
     margin-top: 3%;
     width: 80%;
     height: 100%;
@@ -69,15 +81,27 @@ body div img.card2{
 }
 
 
-body div div .textovete{
+body div div .textovete {
     color: black;
     text-align: center;
     font-size: 20px;
-    font-family:'Pacifico', cursive;
+    font-family: 'Pacifico', cursive;
 
 
 }
-body div.oferta{
-    width: 300px;
-    height: 300px;
+
+body img.oferta {
+    width: 600px;
+    height: 600px;
+    margin-left: 30%;
+    margin-top:3%;
+}
+
+body div p.textooferta {
+    text-decoration: none;
+    color: black;
+    font-family:  'Pacifico', cursive;
+    text-align: center;
+    margin-top:2%;
+    font-size: xx-large;
 }
