--- a/scss/nuevo.scss
+++ b/scss/nuevo.scss
@@ -1,8 +1,8 @@
 // partials inicio
 @import "./partials/_headerinicio.scss";
-@import "./partials/_footerinicio.scss";
+@import "./partials/_variables.scss";
 @import "./partials/_navinicio.scss";
 @import"./partials/_bodyinicio.scss";
+@import "./partials/_footerinicio.scss";
 @import"./partials/_media.scss";
 //variables
-@import "./partials/_variables.scss"
