--- a/scss/partials/_bodyinicio.scss
+++ b/scss/partials/_bodyinicio.scss
@@ -1,10 +1,18 @@
 @import "_variables.scss";
 
+
+* {
+    margin: 0%;
+    padding: 0%;
+}
+
 body {
     background-color: $colorfondo;
     color: $colorletra;
+    cursor: pointer;
 }
 
+// contacto
 
 form fieldset {
     font-size: 100%;
@@ -18,18 +26,6 @@ legend.formulario {
     margin-bottom: 5%;
 }
 
-.contenedor {
-    display: inline;
-    text-align: center;
-}
-
-div div .card {
-    background-color: none;
-}
-
-body div div.card {
-    background-color: none;
-}
 
 
 a img.ofertas {
@@ -39,69 +35,327 @@ a img.ofertas {
     margin-top: 5%;
 }
 
+// producto
+
+body div .tituloproductos {
+    display: block;
+    margin: auto;
+}
+
+body div.tituloproductos h4 {
+    font-family: $letrapagina;
+    color: black;
+    font-size: 40px;
+    text-align: center;
+    margin-top: 3%;
+}
+
 .productos {
-    width: 50px;
-    height: 30px;
-    align-items: center;
-
+    display: flex;
+    width: auto;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    margin: auto;
 }
 
-div div .imgprod {
-    width: 400px;
-    height: 300px;
-    margin-left: 80%;
-    margin-top: 10%;
-    align-items: center;
-
+div .imgprod {
+    margin-top: 4%;
+    width: 300px;
+    height: 200px;
+    margin-bottom: 30px;
+    object-fit: fill;
+    filter: brightness(100%);
+    animation: escalar 1.5s infinite alternate;
+    border-radius: 40px;
+    display: block;
 }
+
+@keyframes escalar {
+    to {
+        transform: scale(1);
+    }
+
+    from {
+        transform: scale(1.05);
+    }
+}
+
+div .imgprod:hover {
+    filter: brightness(60%);
+}
+
+
+// quienes somos
 
 div.quienes img {
-    margin-top: 5%;
-    text-align: center;
-    margin-left: 40%;
-    margin-bottom: 3%;
+    display: block;
+    margin: auto;
+    margin-top: 3%;
 }
 
-body div p.quienessomos{
+body div p.quienessomos {
     color: black;
     font-family: 'Pacifico', cursive;
     font-size: x-large;
     text-align: justify;
     margin-top: 5%;
     margin-left: 3%;
-
-    
+    margin-right: 3%;
 }
 
-body div img.card2 {
-    margin-top: 3%;
-    width: 80%;
-    height: 100%;
-    margin-left: 5%;
-}
-
-
-body div div .textovete {
+// veterinaria
+body .titulovete {
+    font-family: $letrapagina;
     color: black;
+    size: 60px;
     text-align: center;
-    font-size: 20px;
-    font-family: 'Pacifico', cursive;
-
+    margin: auto;
+    margin-top: 3%;
+    font-size: 40px;
 
 }
+
+
+body div div img.servicios {
+    width: 300px;
+    height: 340px;
+    margin-left: 30%;
+    margin-top: 3%;
+    border-radius: 10px;
+
+}
+
+body div p.textovete {
+    text-decoration: none;
+    color: black;
+    font-family: $letrapagina;
+    text-align: center;
+    margin-top: 2%;
+    font-size: large;
+    text-align: center;
+}
+
+.cajaveterinaria {
+    width: 100%;
+    max-width: 1200px;
+    height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+    margin-top: 0%;
+}
+
+div.boxvete {
+    width: 360px;
+    height: 500px;
+    border-radius: 30px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 10px;
+    transition: all 0, 25s;
+    margin-top: 3%;
+}
+
+body div.cajaveterinaria .boxvete:hover {
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(255, 255, 255, 0.2);
+    background-color: rgb(255, 191, 250);
+}
+
+body div.cajaveterinaria .boxvete .servicios {
+    width: 200px;
+    height: 220px;
+    margin: 3%;
+    align-items: center;
+}
+
+
+body .cajaveterinaria .boxvete p {
+    padding: 0 1rem;
+    font-size: 30px;
+    font-weight: 300;
+    font-family: $letrapagina;
+    color: black;
+}
+
+body div.cajaveterinaria .boxvete a {
+    font-weight: 500;
+    text-decoration: none;
+    color: rgb(226, 137, 21);
+    font-family: $letrapagina ;
+    text-align: center;
+    margin-left: 40%;
+    font-size: large;
+}
+
+body div.cajaveterinaria .boxvete a:hover {
+    color: rgb(250, 250, 250);
+}
+
+
+// oferta
+
 
 body img.oferta {
-    width: 600px;
-    height: 600px;
+    width: 300px;
+    height: 300px;
     margin-left: 30%;
-    margin-top:3%;
+    margin-top: 3%;
+    border-radius: 70%;
 }
 
 body div p.textooferta {
     text-decoration: none;
     color: black;
-    font-family:  'Pacifico', cursive;
+    font-family: $letrapagina;
     text-align: center;
-    margin-top:2%;
-    font-size: xx-large;
+    margin-top: 2%;
+    font-size: large;
+    text-align: center;
+}
+
+.cajaoferta {
+    width: 100%;
+    max-width: 1200px;
+    height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+    margin-top: 0%;
+}
+
+div.boxof {
+    width: 360px;
+    height: 500px;
+    border-radius: 30px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 10px;
+    transition: all 0, 25s;
+    margin-top: 3%;
+}
+
+body div.cajaoferta .boxof:hover {
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(255, 255, 255, 0.2);
+    background-color: aliceblue;
+}
+
+body div.cajaoferta .boxof .oferta {
+    width: 200px;
+    height: 220px;
+    margin: 3%;
+    align-items: center;
+}
+
+
+body .cajaoferta .boxof p {
+    padding: 0 1rem;
+    font-size: 30px;
+    font-weight: 300;
+    font-family: $letrapagina;
+    color: black;
+}
+
+body div.cajaoferta .boxof a {
+    font-weight: 500;
+    text-decoration: none;
+    color: rgb(226, 137, 21);
+    font-family: $letrapagina ;
+    text-align: center;
+    margin-left: 40%;
+}
+
+body div.cajaoferta .boxof a:hover {
+    color: rgb(255, 64, 64);
+}
+
+// inicio
+
+div.slide {
+    display: flex;
+    width: 100%;
+    height: 60%;
+    margin-top: 2%;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    flex: 0 0 100%;
+    object-fit: cover;
+    scroll-snap-align: center;
+}
+
+div .slide img {
+    flex: 0 0 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.containerinicio {
+    width: 100%;
+    max-width: 1200px;
+    height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+    margin-top: 0%;
+}
+
+div.cardinicio {
+    width: 360px;
+    height: 800px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba black;
+    overflow: hidden;
+    margin: 10px;
+    transition: all 0, 25s;
+    margin-top: 3%;
+}
+
+body div.containerinicio .cardinicio:hover {
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+    background-color: $colorletra;
+}
+
+body div.containerinicio .cardinicio img {
+    width: 330px;
+    height: 220px;
+    margin: 4%;
+    align-items: center;
+}
+
+body div.containerinicio .cardinicio h4 {
+    font-weight: 600;
+    font-size: 50px;
+    font-family: 'Satisfy', cursive;
+    text-align: center;
+    color: black;
+    margin-top: 4%;
+}
+
+body .containerinicio .cardinicio p {
+    padding: 0 1rem;
+    font-size: 30px;
+    font-weight: 300;
+    font-family: $letrapagina;
+    color: black;
+
+}
+
+body div.containerinicio .cardinicio a {
+    font-weight: 500;
+    text-decoration: none;
+    color: rgb(226, 137, 21);
+    font-family: $letrapagina ;
+    text-align: center;
+    margin-left: 40%;
+}
+
+body div.containerinicio .cardinicio a:hover {
+    color: black;
+
 }
