--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,5 +1,7 @@
 $colorfondo: #ffda9e;
 $colorletra: #9b9b9b;
 $tipografiatitulo: 'Cookie', cursive;
-$fuentegrande:180px;
-$fuentetexto:100px;
+$fuentegrande: 180px;
+$fuentetexto: 100px;
+
+$letrapagina: 'Pacifico', cursive;
